--- a/app/views/prototypes/new-vacancies/how-long-education.html
+++ b/app/views/prototypes/new-vacancies/how-long-education.html
@@ -43,6 +43,10 @@
 
     <p>Include any time in a previous role before they joined your organisation.
     </p>
+
+    <div class="govuk-inset-text">
+      This year you can select 'Don't know' but you will need to give an answer next year.
+    </div><br>
     
     
     <div class="govuk-radios">
