changes on a sunday

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -215,7 +215,10 @@
       </p>
 
       <br>
+      <p>Another idea for vacancies <a href="/prototypes/another-vacancies/details">Another flow</a>
+      </p>
 
+      <br>
 
       
 
