--- a/app/views/prototypes/alex/add.html
+++ b/app/views/prototypes/alex/add.html
@@ -33,7 +33,7 @@
 
 
             <h1 class="govuk-heading-xl">
-  What is their ethnicity?
+              How many governors - by ethnicity?
 </h1>
 <p class="govuk-body">Enter the number of governors in each catagory.</p>
 <br>
@@ -284,6 +284,34 @@
   </tbody>
 </table>
 <br><br><br>
+
+<table class="govuk-table">
+                
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Prefer not to say
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
+    
+
+    
+
+    
+    
+    
+  </tbody>
+</table><br><br>
 
   <fieldset class="govuk-fieldset">
 
