--- a/app/views/prototypes/alex/disability.html
+++ b/app/views/prototypes/alex/disability.html
@@ -26,7 +26,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-              Do your governors have a disability?</h1>
+              How many consider themselves to have a disability?</h1>
 
               <span id="nationality-hint" class="govuk-hint">
                 Enter the number of governors in each catagory.
@@ -39,13 +39,13 @@
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="postcode">
-      Yes
+      Disability
     </label>
     <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
     
     <div class="govuk-form-group">
       <label class="govuk-label" for="postcode">
-        No
+        No disability
       </label>
       <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
     
