--- a/app/views/prototypes/alex/nationality.html
+++ b/app/views/prototypes/alex/nationality.html
@@ -26,7 +26,8 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-              What is the nationality of your governors?</h1>
+              How many governors - by nationality?
+</h1>
             <span id="nationality-hint" class="govuk-hint">
               Enter the number of governors in each catagory.
            </span>
