--- a/app/views/prototypes/alex/staff-totals.html
+++ b/app/views/prototypes/alex/staff-totals.html
@@ -26,7 +26,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  What is the gender of your governors?
+  How many governors - by gender?
             </h1>
 
             <p class="govuk-body">Enter the number of governors in each catagory.</p>
