--- a/app/views/prototypes/alex/time.html
+++ b/app/views/prototypes/alex/time.html
@@ -26,7 +26,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-              How long have they been governors?</h1>
+              How many governors - by length of time served?</h1>
             <span id="nationality-hint" class="govuk-hint">
             Tell us the number of governors in time period.
            </span><br>
