--- a/app/views/prototypes/alex/age.html
+++ b/app/views/prototypes/alex/age.html
@@ -26,8 +26,8 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  What are their ages?
-            </h1>
+              How many governors - by age range?
+                        </h1>
             <p class="govuk-body">Enter the number of governors you have in their age range.</p><br>
 
 
@@ -35,30 +35,30 @@
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="postcode">
-      16-18
+      16-18 years
     </label>
     <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
     
     <div class="govuk-form-group">
       <label class="govuk-label" for="postcode">
-        19-24
+        19-24 years
       </label>
       <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
     
       <div class="govuk-form-group">
         <label class="govuk-label" for="postcode">
-          25-34
+          25-34 years
         </label>
         <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
     
         <div class="govuk-form-group">
           <label class="govuk-label" for="postcode">
-            35-44</label>
+            35-44 years</label>
           <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
     
           <div class="govuk-form-group">
             <label class="govuk-label" for="postcode">
-              45-54</label>
+              45-54 years</label>
             <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
             
             <div class="govuk-form-group">
