--- a/app/views/prototypes/another-vacancies/answers-provider.html
+++ b/app/views/prototypes/another-vacancies/answers-provider.html
@@ -71,10 +71,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teachers
+              Teacher vacancies
             </dt>
             <dd class="govuk-summary-list__value">
-              12
+              Construction, Planning and the Built Environment - 4
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -88,10 +88,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teachers filled
+              
             </dt>
             <dd class="govuk-summary-list__value">
-          As advertised - 10
+              Digital / ICT - 3
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -107,7 +107,24 @@
              
             </dt>
             <dd class="govuk-summary-list__value">
-              Temporarily - 1
+              Performing arts - 1
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Difficult to fill
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Digital / ICT
+
+- Elements of the post had to be changed
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -118,10 +135,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             
+              
             </dt>
             <dd class="govuk-summary-list__value">
-              No - 1
+              Performing arts - It wasn't filled in a resonable time
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -130,47 +147,7 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Difficult subjects
-            </dt>
-            <dd class="govuk-summary-list__value">
-              English, Business Administration
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              English level
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Level 2
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Business Administration level
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Level 3
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
+          
 
 
         </dl>
