--- a/app/views/prototypes/another-vacancies/difficult.html
+++ b/app/views/prototypes/another-vacancies/difficult.html
@@ -56,7 +56,7 @@
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Aspects of the post had to be changed
+              Elements of the post had to be changed
             </label>
           </div>
           <div class="govuk-radios__item">
@@ -98,7 +98,7 @@
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    Aspects of the post had to be changed
+                    Elements of the post had to be changed
                   </label>
                 </div>
                 <div class="govuk-radios__item">
@@ -137,7 +137,7 @@
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    Aspects of the post had to be changed
+                    Elements of the post had to be changed
                   </label>
                 </div>
                 <div class="govuk-radios__item">
