--- a/app/views/prototypes/another-vacancies/difficult.html
+++ b/app/views/prototypes/another-vacancies/difficult.html
@@ -50,7 +50,7 @@
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-              It had to be advertised on many occations 
+              It had to be advertised many times
             </label>
           </div>
           <div class="govuk-radios__item">
@@ -92,7 +92,7 @@
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                    It had to be advertised on many occations 
+                    It had to be advertised many times
                   </label>
                 </div>
                 <div class="govuk-radios__item">
@@ -131,7 +131,7 @@
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
                   <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                    It had to be advertised on many occations 
+                    It had to be advertised many times
                   </label>
                 </div>
                 <div class="govuk-radios__item">
