--- a/app/views/prototypes/another-vacancies/filled-or.html
+++ b/app/views/prototypes/another-vacancies/filled-or.html
@@ -35,104 +35,54 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                Which vacancies were filled?
+                How many vacancies were filled?
               </h1>
             </legend>
 
             <div id="citizenship-conditional-hint" class="govuk-hint">
-              Tick the boxes to indicate they were filled.
+              Enter the number that were filled.
               </div>
             
             
-            <br><br>
+            <br>
 
-            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Construction, Planning and the Built Environment
-            </h2><br>
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="citizenship-conditional" name="citizen" type="checkbox" value="email" data-aria-controls="conditional-citizenship-conditional">
-                <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional">
-                  Vacancy one
-                </label>
-              </div>
-              
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="citizenship-conditional-2" name="citizen" type="checkbox" value="phone" data-aria-controls="conditional-citizenship-conditional-2">
-                <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-2">
-                  Vacancy two
-                </label>
-              </div>
-              
-
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="citizenship-conditional-2" name="citizen" type="checkbox" value="phone" data-aria-controls="conditional-citizenship-conditional-2">
-                <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-2">
-                  Vacancy three
-                </label>
-              </div>
+            <table class="govuk-table">
+                
+              <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                  <th scope="col" class="govuk-table__header"></th>
+                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+                </tr>
+              </thead>
+              <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">Construction, Planning and the Built Environment</th>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                </tr>
             
-              
-              
-            </div>
-
-            <br><br><br>
-
-            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Digital / ICT
-            </h2><br>
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="citizenship-conditional" name="citizen" type="checkbox" value="email" data-aria-controls="conditional-citizenship-conditional">
-                <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional">
-                  Vacancy one
-                </label>
-              </div>
-              
-              
-              
-
-              
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">Digital / ICT
+                  </th>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                </tr>
             
-              
-              
-            </div>
+                <tr class="govuk-table__row">
+                  <th scope="row" class="govuk-table__header">Performing arts</th>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+                </tr>
+              </tbody>
+            </table>
 
-            <br><br><br>
-
-            <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Performing arts</h2><br>
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="citizenship-conditional" name="citizen" type="checkbox" value="email" data-aria-controls="conditional-citizenship-conditional">
-                <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional">
-                  Vacancy one
-                </label>
-              </div>
-              
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="citizenship-conditional-2" name="citizen" type="checkbox" value="phone" data-aria-controls="conditional-citizenship-conditional-2">
-                <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-2">
-                  Vacancy two
-                </label>
-              </div>
-              
-
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="citizenship-conditional-2" name="citizen" type="checkbox" value="phone" data-aria-controls="conditional-citizenship-conditional-2">
-                <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-2">
-                  Vacancy three
-                </label>
-              </div>
-            
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="citizenship-conditional-3" name="citizen" type="checkbox" value="text message" data-aria-controls="conditional-citizenship-conditional-3">
-                <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-3">
-                  Vacancy four
-                </label>
-              </div>
-              
-            </div>
-        
+          
           </fieldset>
-        </div><br>
+        </div>
 
 
           <a href="open" class="govuk-button show-continue" style="display: inline;">
