--- a/app/views/prototypes/another-vacancies/difficult.html
+++ b/app/views/prototypes/another-vacancies/difficult.html
@@ -33,129 +33,153 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-        Did you find it difficult to fill the vacancies?
+        How many vacancies were difficult to recruit for?
       </h1>
-    </legend><br><br>
+    </legend>
+    
+    <div id="citizenship-conditional-hint" class="govuk-hint">
+      Enter the number for each subject
+      </div><br><br><br>
+
+    <h2 class="govuk-heading-m">Construction, Planning and the Built Environment</h2>
+
+    <table class="govuk-table">
+                
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header"></th>
+          <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+          <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+        </tr>
+      </thead>
+      <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">It had to be advertised many times</th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+    
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Elements of the post had to be changed
+          </th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+    
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">It wasn't filled in a resonable time</th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">There were no difficulties
+          </th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+      </tbody>
+    </table>
+    <br><br>
+
+    <h2 class="govuk-heading-m">Digital / ICT</h2>
+
+    <table class="govuk-table">
+                
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header"></th>
+          <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+          <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+        </tr>
+      </thead>
+      <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">It had to be advertised many times</th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+    
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Elements of the post had to be changed
+          </th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+    
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">It wasn't filled in a resonable time</th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">There were no difficulties
+          </th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+      </tbody>
+    </table>
+
+    <br><br>
+
+    <h2 class="govuk-heading-m">Performing arts
+
+    </h2>
+
+    <table class="govuk-table">
+                
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header"></th>
+          <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+          <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+        </tr>
+      </thead>
+      <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">It had to be advertised many times</th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+    
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Elements of the post had to be changed
+          </th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+    
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">It wasn't filled in a resonable time</th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">There were no difficulties
+          </th>
+          <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+          <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+           <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+        </tr>
+      </tbody>
+    </table>
 
    
-    <h2 class="govuk-heading-m">Construction, Planning and the Built Environment</h2>
-    
-
-    <div class="govuk-form-group">
-      <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          
-        </legend>
-        <div class="govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-              It had to be advertised many times
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Elements of the post had to be changed
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-              It wasn't filled in a resonable time
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-            <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-              There were no difficulties
-            </label>
-          </div>
-        </div>
-    
-      </fieldset>
-    </div>
-       <br>
-
-       
-      
-         
-          <h2 class="govuk-heading-m">Digital / ICT</h2>
-          
-      
-          <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                
-              </legend>
-              <div class="govuk-radios">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                    It had to be advertised many times
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    Elements of the post had to be changed
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-                    It wasn't filled in a resonable time
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-                    There were no difficulties
-                  </label>
-                </div>
-              </div>
-          
-            </fieldset>
-          </div>
-             <br><br>
-
-             <h2 class="govuk-heading-m">Performing arts</h2>
-          
-      
-          <div class="govuk-form-group">
-            <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                
-              </legend>
-              <div class="govuk-radios">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                    It had to be advertised many times
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    Elements of the post had to be changed
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-                    It wasn't filled in a resonable time
-                  </label>
-                </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-                    There were no difficulties
-                  </label>
-                </div>
-              </div>
-          
-            </fieldset>
-          </div><br><br><br>
+          <br><br>
   
   
             <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
