--- a/app/views/prototypes/another-vacancies/filled-or.html
+++ b/app/views/prototypes/another-vacancies/filled-or.html
@@ -40,9 +40,8 @@
             </legend>
 
             <div id="citizenship-conditional-hint" class="govuk-hint">
-              Enter the number that were filled.
+              Enter the number for each subject
               </div>
-            
             
             <br>
 
