--- a/app/views/prototypes/another-vacancies/open.html
+++ b/app/views/prototypes/another-vacancies/open.html
@@ -40,10 +40,9 @@
             </legend>
 
             <div id="citizenship-conditional-hint" class="govuk-hint">
-              Enter the number for each subject.
+              Enter the number for each subject
               </div>
-            
-            
+          
             <br>
 
             <table class="govuk-table">
