--- a/app/views/prototypes/another-vacancies/answers-provider.html
+++ b/app/views/prototypes/another-vacancies/answers-provider.html
@@ -138,7 +138,7 @@
               
             </dt>
             <dd class="govuk-summary-list__value">
-              Performing arts - It wasn't filled in a resonable time
+              Performing arts - It wasn't filled in a reasonable time
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
