--- a/app/views/prototypes/another-vacancies/difficult.html
+++ b/app/views/prototypes/another-vacancies/difficult.html
@@ -69,7 +69,7 @@
         </tr>
     
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">It wasn't filled in a resonable time</th>
+          <th scope="row" class="govuk-table__header">It wasn't filled in a reasonable time</th>
           <td class="govuk-table__cell govuk-table__cell--numeric"></td>
           <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
            <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
@@ -114,7 +114,7 @@
         </tr>
     
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">It wasn't filled in a resonable time</th>
+          <th scope="row" class="govuk-table__header">It wasn't filled in a reasonable time</th>
           <td class="govuk-table__cell govuk-table__cell--numeric"></td>
           <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
            <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
@@ -162,7 +162,7 @@
         </tr>
     
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">It wasn't filled in a resonable time</th>
+          <th scope="row" class="govuk-table__header">It wasn't filled in a reasonable time</th>
           <td class="govuk-table__cell govuk-table__cell--numeric"></td>
           <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
            <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
