--- a/app/views/prototypes/second/answers-provider.html
+++ b/app/views/prototypes/second/answers-provider.html
@@ -144,7 +144,7 @@
 
         </dl>
 
-        <a href="start-staff"  class="govuk-button govuk-button--secondary">Next questions</a>
+        <a href="start-staff"  class="govuk-button govuk-button--secondary">Next question</a>
 
         
         
@@ -327,12 +327,12 @@
                 </div>
               </dl>
               
-              <a href='subcontractor'>
+              <a href='#'>
                 <button class="govuk-button govuk-button--secondary" data-module="govuk-button" id="checkBtn">
                   Add funding stream
                 </button>
               </a>
-              <a href='delete-confirmation-2'>
+              <a href='#'>
               <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
                 Delete 
               </button>
@@ -362,7 +362,7 @@
             </div>
             <div id="accordion-with-summary-sections-content-3" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-3">
               
-              <h2 class="govuk-caption-m">Funding stream: Traineeship 16-18<span style='float: right'><a href='subcontractor-form'>Edit</a> &nbsp; <a href='delete-funding'>Delete</a></span></h2>
+              <h2 class="govuk-caption-m">Funding stream: Traineeship 16-18<span style='float: right'><a href='form'>Edit</a> &nbsp; <a href='delete-funding'>Delete</a></span></h2>
               <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                 
                 <div class="govuk-summary-list__row">
@@ -523,6 +523,7 @@
           </div>
           
           </div>
+          
 
 
 
